group 'com.epam.university'
version '0.2'

apply plugin: 'java'
apply plugin: 'checkstyle'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

checkstyle {
    toolVersion = "8.2"
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
compileJava.options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
compileTestJava.options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"

tasks.withType(Checkstyle) {
    ignoreFailures = true
    reports {
        html.enabled = true
        xml.enabled = false
    }
}

dependencies {
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.apache.commons:commons-math3:3.6.1'
}
